--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     color: blueviolet;
+    background-color: aqua;
   }
   
   h1, h2 {
@@ -28,7 +29,7 @@ body {
   
   .input-section button {
     padding: 5px 10px;
-    background-color: #4CAF50;
+    background-color: blueviolet;
     color: white;
     border: none;
     border-radius: 4px;
@@ -51,7 +52,7 @@ body {
   }
   
   th {
-    background-color: #4CAF50;
+    background-color: blueviolet;
     color: white;
   }
   
